[gd_scene load_steps=5 format=3 uid="uid://cjf0bh36icbl3"]

[ext_resource type="Script" uid="uid://dluawq2s5bhbj" path="res://scenes/menus/main_menu.gd" id="1_2o76q"]
[ext_resource type="StyleBox" uid="uid://bfl7q8pouo7uc" path="res://styles/components/menu_panel_primary.tres" id="2_6bivr"]
[ext_resource type="Theme" uid="uid://domdts7824yny" path="res://styles/theme_default.tres" id="3_imvie"]
[ext_resource type="StyleBox" uid="uid://ch1y7bkde2bl5" path="res://styles/components/h_divider.tres" id="4_6bivr"]

[node name="MainMenu" type="ColorRect" groups=["menu"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_2o76q")

[node name="MenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -92.0
offset_right = 125.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_6bivr")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="btnStartGame" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_imvie")
text = "Start Game"

[node name="btnOptions" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_imvie")
text = "Options"

[node name="HSeparator" type="HSeparator" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = ExtResource("4_6bivr")

[node name="btnQuitGame" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_imvie")
text = "Quit Game"

[connection signal="pressed" from="MenuContainer/VBoxContainer/btnStartGame" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/btnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/btnQuitGame" to="." method="_on_btn_quit_game_pressed"]
